<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/default_id"
        android:inputType="text"
        android:key="@string/pref_app_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_app_id" />


    <EditTextPreference
    android:capitalize="words"
    android:defaultValue="@string/default_key"
    android:inputType="text"
    android:key="@string/pref_app_key"
    android:maxLines="1"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_app_key" />

    <EditTextPreference
        android:defaultValue="@string/default_offset"
        android:inputType="numberSigned"
        android:key="@string/pref_offset"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_offset" />
</PreferenceScreen>
