<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yle.olanigan.media.ItemActivity"
    tools:showIn="@layout/activity_item">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:background="@color/colorAccent"
        android:padding="@dimen/small_margin"
        ></TextView>

    <TextView
        android:id = "@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:padding="@dimen/small_margin"
        android:background="@color/colorAccent"
        ></TextView>

    <TextView
        android:id = "@+id/descView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastUpdated"
        android:padding="@dimen/small_margin"
        android:background="@color/colorAccent"
        ></TextView>

    <TextView
        android:id = "@+id/lastModifiedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ></TextView>
</LinearLayout>
